[gd_scene load_steps=76 format=3 uid="uid://7le5sfkkrpj5"]

[ext_resource type="Script" path="res://Scenes/enemy/skelet/mushroom.gd" id="1_meftf"]
[ext_resource type="Texture2D" uid="uid://r8125rwypyk3" path="res://Assets/Monsters_Creatures_Fantasy/Mushroom/Attack.png" id="2_ir4tw"]
[ext_resource type="Texture2D" uid="uid://ddxox7bbabfja" path="res://Assets/Monsters_Creatures_Fantasy/Mushroom/Death.png" id="3_b5f0d"]
[ext_resource type="Texture2D" uid="uid://rhxmscr6gkhd" path="res://Assets/Monsters_Creatures_Fantasy/Mushroom/Take Hit.png" id="4_fl5uf"]
[ext_resource type="Texture2D" uid="uid://dxya1omcikwcx" path="res://Assets/Monsters_Creatures_Fantasy/Mushroom/Idle.png" id="5_ypkyn"]
[ext_resource type="Texture2D" uid="uid://co2hc0kgtmpt3" path="res://Assets/Monsters_Creatures_Fantasy/Mushroom/Run.png" id="6_0xp5w"]
[ext_resource type="Texture2D" uid="uid://jorkbq2ygb7g" path="res://Assets/smoke/Free Smoke Fx  Pixel 07.png" id="7_h1jc6"]
[ext_resource type="PackedScene" uid="uid://bwfpwgwgdnhdo" path="res://Scenes/enemy/mob_health.tscn" id="8_8laal"]
[ext_resource type="AudioStream" uid="uid://c2secqw66gqg8" path="res://Assets/click-21156 (1).mp3" id="9_1qjt0"]
[ext_resource type="AudioStream" uid="uid://xgyw65gmju7x" path="res://Assets/walking/forest_01_awav.mp3" id="10_cqm2q"]
[ext_resource type="AudioStream" uid="uid://c7kd1r38lin4p" path="res://Assets/walking/forest_01_b.mp3" id="11_vc80r"]
[ext_resource type="AudioStream" uid="uid://cc1o3gp4hu8bw" path="res://Assets/walking/forest_01_c.mp3" id="12_t7glx"]
[ext_resource type="AudioStream" uid="uid://b7xgvvon86m2e" path="res://Assets/walking/forest_01_d.mp3" id="13_lfqbo"]
[ext_resource type="AudioStream" uid="uid://0r68tenqn3g8" path="res://Assets/walking/forest_01_e.mp3" id="14_btkm1"]
[ext_resource type="AudioStream" uid="uid://n205ebterxds" path="res://Assets/bezjalostnyiy-silnyiy-udar-nojom-po-tseli.mp3" id="15_5nwta"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yqiw1"]
size = Vector2(54, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wm5u"]
atlas = ExtResource("2_ir4tw")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8426"]
atlas = ExtResource("2_ir4tw")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_043ix"]
atlas = ExtResource("2_ir4tw")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ot5m0"]
atlas = ExtResource("2_ir4tw")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ghnm"]
atlas = ExtResource("2_ir4tw")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkeuy"]
atlas = ExtResource("2_ir4tw")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_k44c7"]
atlas = ExtResource("2_ir4tw")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwkrf"]
atlas = ExtResource("2_ir4tw")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_eakvx"]
atlas = ExtResource("3_b5f0d")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5j0p"]
atlas = ExtResource("3_b5f0d")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xb6na"]
atlas = ExtResource("3_b5f0d")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4iq3i"]
atlas = ExtResource("3_b5f0d")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ar7s"]
atlas = ExtResource("4_fl5uf")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk3hu"]
atlas = ExtResource("4_fl5uf")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4puwr"]
atlas = ExtResource("4_fl5uf")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmy6i"]
atlas = ExtResource("4_fl5uf")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0ln8"]
atlas = ExtResource("5_ypkyn")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_anyjr"]
atlas = ExtResource("5_ypkyn")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_waw6t"]
atlas = ExtResource("5_ypkyn")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_22hyh"]
atlas = ExtResource("5_ypkyn")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7f7o2"]
atlas = ExtResource("6_0xp5w")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqhn3"]
atlas = ExtResource("6_0xp5w")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3e4em"]
atlas = ExtResource("6_0xp5w")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_cll0m"]
atlas = ExtResource("6_0xp5w")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqh5f"]
atlas = ExtResource("6_0xp5w")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_woko1"]
atlas = ExtResource("6_0xp5w")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_occ7x"]
atlas = ExtResource("6_0xp5w")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kflej"]
atlas = ExtResource("6_0xp5w")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_dnys1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wm5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8426")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_043ix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ot5m0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ghnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkeuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k44c7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwkrf")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eakvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5j0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xb6na")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4iq3i")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ar7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk3hu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4puwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmy6i")
}],
"loop": false,
"name": &"hit",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0ln8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anyjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_waw6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22hyh")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7f7o2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqhn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3e4em")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cll0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqh5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_woko1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_occ7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kflej")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_6pbc8"]
atlas = ExtResource("7_h1jc6")
region = Rect2(0, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6jdt"]
atlas = ExtResource("7_h1jc6")
region = Rect2(64, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckp56"]
atlas = ExtResource("7_h1jc6")
region = Rect2(128, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct36o"]
atlas = ExtResource("7_h1jc6")
region = Rect2(192, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjbbj"]
atlas = ExtResource("7_h1jc6")
region = Rect2(256, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qq2cw"]
atlas = ExtResource("7_h1jc6")
region = Rect2(320, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba8ma"]
atlas = ExtResource("7_h1jc6")
region = Rect2(384, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwg7w"]
atlas = ExtResource("7_h1jc6")
region = Rect2(448, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhneq"]
atlas = ExtResource("7_h1jc6")
region = Rect2(512, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n64lg"]
atlas = ExtResource("7_h1jc6")
region = Rect2(576, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8eo4"]
atlas = ExtResource("7_h1jc6")
region = Rect2(640, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_snapr"]
atlas = ExtResource("7_h1jc6")
region = Rect2(704, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx52v"]
atlas = ExtResource("7_h1jc6")
region = Rect2(768, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7547e"]
atlas = ExtResource("7_h1jc6")
region = Rect2(832, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kneh2"]
atlas = ExtResource("7_h1jc6")
region = Rect2(896, 640, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_k0lqf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pbc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6jdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckp56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct36o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjbbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qq2cw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba8ma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwg7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhneq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n64lg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8eo4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snapr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx52v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7547e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kneh2")
}],
"loop": false,
"name": &"smoke",
"speed": 50.0
}]

[sub_resource type="Animation" id="Animation_yhjk5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackDirection/AttackRange/Damage_Box/HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer3:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_osgeq"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/Damage_Box/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.533333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_urdbp"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["death"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer3:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_276eg"]
length = 0.571429
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["hit"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer3:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7hyle"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["idle"]
}

[sub_resource type="Animation" id="Animation_2tlmg"]
resource_name = "new_animation"

[sub_resource type="Animation" id="Animation_5hh37"]
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["run"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_6v8no"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14, 0.16, 0.18, 0.2, 0.22, 0.24, 0.26, 0.28),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D2:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["smoke"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b114q"]
_data = {
"RESET": SubResource("Animation_yhjk5"),
"attack": SubResource("Animation_osgeq"),
"death": SubResource("Animation_urdbp"),
"hit": SubResource("Animation_276eg"),
"idle": SubResource("Animation_7hyle"),
"new_animation": SubResource("Animation_2tlmg"),
"run": SubResource("Animation_5hh37"),
"smoke": SubResource("Animation_6v8no")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ocxd1"]
size = Vector2(28, 44)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vfdvs"]
radius = 24.0
height = 98.0

[sub_resource type="CircleShape2D" id="CircleShape2D_w1j82"]
radius = 14.3606

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uvkwn"]
size = Vector2(1034.94, 186)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_nrtcw"]
streams_count = 5
stream_0/stream = ExtResource("10_cqm2q")
stream_1/stream = ExtResource("11_vc80r")
stream_2/stream = ExtResource("12_t7glx")
stream_3/stream = ExtResource("13_lfqbo")
stream_4/stream = ExtResource("14_btkm1")

[node name="mushroom" type="CharacterBody2D"]
position = Vector2(-4, -26)
scale = Vector2(0.85, 0.85)
collision_layer = 4
collision_mask = 5
floor_max_angle = 1.39626
script = ExtResource("1_meftf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_yqiw1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -22)
scale = Vector2(2.27666, 2.27666)
sprite_frames = SubResource("SpriteFrames_dnys1")
animation = &"attack"
autoplay = "idle"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(22, -29)
scale = Vector2(2.25781, 2.25781)
sprite_frames = SubResource("SpriteFrames_k0lqf")
animation = &"smoke"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b114q")
}
autoplay = "idle"

[node name="AttackDirection" type="Node2D" parent="."]

[node name="AttackRange" type="Area2D" parent="AttackDirection"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AttackDirection/AttackRange"]
position = Vector2(48, 3)
shape = SubResource("RectangleShape2D_ocxd1")

[node name="Damage_Box" type="Node2D" parent="AttackDirection/AttackRange"]

[node name="HurtBox" type="Area2D" parent="AttackDirection/AttackRange/Damage_Box"]
collision_layer = 64
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/AttackRange/Damage_Box/HurtBox"]
shape = SubResource("CapsuleShape2D_vfdvs")

[node name="HitBox" type="Area2D" parent="AttackDirection/AttackRange/Damage_Box"]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/AttackRange/Damage_Box/HitBox"]
position = Vector2(48, 4)
shape = SubResource("CircleShape2D_w1j82")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, -1)
shape = SubResource("RectangleShape2D_uvkwn")

[node name="MobHealth" parent="." instance=ExtResource("8_8laal")]
position = Vector2(3, -71)
scale = Vector2(0.25, 0.25)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_1qjt0")
volume_db = 20.0
pitch_scale = 0.6

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_nrtcw")
volume_db = -20.0

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_5nwta")

[connection signal="body_entered" from="AttackDirection/AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="area_entered" from="AttackDirection/AttackRange/Damage_Box/HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="AttackDirection/AttackRange/Damage_Box/HurtBox" to="MobHealth" method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="AttackDirection/AttackRange/Damage_Box/HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="damage_recived" from="MobHealth" to="." method="_on_mob_health_damage_recived"]
[connection signal="no_hp" from="MobHealth" to="." method="_on_mob_health_no_hp"]
